--- a/src/sass/style_sass.scss
+++ b/src/sass/style_sass.scss
@@ -4,6 +4,7 @@
 //Variables
 $bg_Color:cadetblue;
 $bg_color_sec:antiquewhite;
+$bg_color_hlight: aqua;
 $font_color_2:white;
 
 *{
@@ -12,12 +13,16 @@ $font_color_2:white;
     min-width:250px;
 }
 
-body{border:1px solid black;
+body{
     width: 95vw;
     background: $bg_Color; 
     margin:0 auto;   
     min-width:250px;
     overflow: visible;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     nav{
         width: 85vw;
@@ -25,7 +30,6 @@ body{border:1px solid black;
         max-height: 7vh;
         position: fixed;
         top:0;
-        left:7.5vw;
 
         display: flex;
         flex-direction: row;
@@ -36,15 +40,21 @@ body{border:1px solid black;
         border-radius: 0 0 15px 15px;       
 
         h1{
+            width:50%;
             margin: 2vh 5vw;
+            min-width: auto;
         }
 
         ul{
+            width:fit-content;
             list-style: none;
             margin-right:5vw;
+            justify-self: right;
+            min-width: auto;
 
             li{
-                cursor:pointer;                                
+                cursor:pointer;
+                min-width:inherit;                               
             }
         }
 
@@ -52,7 +62,7 @@ body{border:1px solid black;
 
     main{border:1px solid black;
         margin: 7.5vh auto 0;
-        width: 90%;
+        width: 85vw;
 
         display: flex;
         flex-direction: column;
@@ -65,7 +75,7 @@ body{border:1px solid black;
 
     }
 
-    #new_task{border:1px solid black;
+    #new_task{ border:2px solid black;
         position: absolute;
         top:10vh;
         z-index: 2;
@@ -105,7 +115,7 @@ body{border:1px solid black;
                 max-width: calc(500px - 4vw);
             }
 
-            div{border:1px solid black;
+            div{
                 display: flex;
                 align-items: baseline;
                 gap: 1vw; 
@@ -122,14 +132,66 @@ body{border:1px solid black;
                     width: 50%; 
                     border-radius: 5px;                   
                 }
-
-
             }
         }
-        
-
     }
 
+    #task_view{
+        margin: 1vh auto;
+
+        article{  //border:1px solid black;
+            display:flex;
+            flex-direction: row;
+            justify-content: left;
+            align-items:first baseline;
+            flex-wrap: wrap;
+            
+            width: 80vw;
+            padding: 0.5vh 1vw;
+            margin:0 auto;
+            border-bottom: 2px solid black;            
+
+            input[type = checkbox]{
+                max-width: fit-content;
+                min-width:2vw;
+                height: 2vh;
+                width: 5vw;
+                margin: 0;
+                align-self:first baseline;              
+                
+            }
+           p{ border:1px solid black;
+               // max-width: 30%;
+                min-width: 100px;
+                width: 15vw;
+                padding-left: 0.5vw;
+                overflow: hidden;                
+            }  
+
+            :last-child{
+                width:fit-content;
+                //max-width: 50vw;
+                
+            } 
+            
+            @media screen and (width < 756px) {
+                :last-child{
+                    width:80vw;
+                    max-width: 80vw;
+                }                
+            } 
+            
+        }
+
+        >:hover{
+            border-radius: 5px;
+            background-color: $bg_color_hlight;
+        }
+        
+        >:last-child{
+            border-bottom:none;
+        }
+    }
 }
 
 .invisible{
