--- a/src/sass/style_sass.scss
+++ b/src/sass/style_sass.scss
@@ -62,7 +62,7 @@ body{
 
     }
 
-    main{border:1px solid black;
+    main{
         margin: 7.5vh auto 0;
         width: 85vw;
 
@@ -77,7 +77,8 @@ body{
 
     }
 
-    #new_task{ border:2px solid black;
+    #new_task{ 
+        border:2px solid black;
         position: absolute;
         top:10vh;
         z-index: 2;
@@ -138,7 +139,7 @@ body{
         }
     }
 
-    #filter_task{ //border: 2px solid black;
+    #filter_task{ 
         position: absolute;
         z-index: 10;
         width: fit-content;
@@ -154,7 +155,7 @@ body{
             padding: 0.3vh 0.5vw;
             
 
-            li{ //border: 1px solid red;
+            li{ 
                 min-width: 0;
                 background: $bg_Color;
                 border-radius: 3px;
@@ -174,7 +175,7 @@ body{
     #task_view{
         margin: 1vh auto;
 
-        article{  //border:1px solid black;
+        article{  
             display:flex;
             flex-direction: row;
             justify-content: left;
@@ -195,7 +196,7 @@ body{
                 align-self:first baseline;              
                 
             }
-           p{ border:1px solid black;
+           p{
                // max-width: 30%;
                 min-width: 100px;
                 width: 15vw;
